--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,10 @@
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "start:dev": "nodemon --env-file=../.env.development src/index.js"
+    "start:dev": "nodemon --env-file=.env.development -L src/index.js",
+    "docker:build": "docker build -t my-app/express-api:latest-dev .",
+    "docker:run": "docker run --name api -v F:\\projects\\docker_tut\\api:/user/src/app my-app/express-api:latest-dev",
+    "docker:stop": "docker stop api"
   },
   "keywords": [],
   "author": "Jade D",
